k8s/manifests/ambient/staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-mtls-strict
  namespace: staging
spec:
  mtls:
    mode: STRICT

---
# Default DENY ALL

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: staging
spec: {}

---
# ingress -> frontend

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-frontend
  namespace: staging
spec:
  selector:
    matchLabels:
      app: frontend
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - istio-ingress

---
# frontend -> currencyservice

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-frontend-to-currency
  namespace: staging
spec:
  selector:
    matchLabels:
      app: currencyservice
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/frontend-sa

---
# frontend -> checkoutservice

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-frontend-to-checkout
  namespace: staging
spec:
  selector:
    matchLabels:
      app: checkoutservice
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/frontend-sa

---
# checkoutservice -> paymentservice

# CHỈ checkout được gọi payment

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-checkout-to-payment
  namespace: staging
spec:
  selector:
    matchLabels:
      app: paymentservice
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/staging/sa/checkoutservice-sa

---
# Waypoint

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: staging-waypoint
  namespace: staging
  labels:
    istio.io/waypoint-for: namespace
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
